fixed navigation links wrapping

--- a/style.css
+++ b/style.css
@@ -27,11 +27,12 @@ nav {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 nav > ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   list-style-type: none;
 }
